Removed hidden files from repo and updated .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,42 @@
 /.idea/libraries
 .DS_Store
 /build
+
+# built application files
+*.apk
+*.ap_
+
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Android Studio
+*.iml
+*.ipr
+*.iws
+.gradle/**
+build/**
+.idea/**
+
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
