--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile files('src/main/java/libs/commons-io-2.4.jar')
+    compile files('src/main/java/libs/activeandroid-3.0.jar')
 }
